# rig

./: Cargo.toml
crates/rig-core/: Cargo.toml
crates/rig-core/src/: json_utils.rs
crates/rig-core/src/providers/chatgpt/: cache_identity.rs  mod.rs  websocket.rs  wire_capture.rs
crates/rig-core/src/providers/copilot/: mod.rs
crates/rig-core/src/providers/openai/: client.rs
crates/rig-core/src/providers/openai/responses_api/: mod.rs  streaming.rs  websocket.rs
